--- a/src/Components/Page/style.module.scss
+++ b/src/Components/Page/style.module.scss
@@ -1,9 +1,6 @@
 .textButton {
-  background: rgba(31, 29, 43, 0.12);
-  color: white;
-  border: 2px linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%);
-  box-sizing: border-box;
-  border-radius: 90px;
+  background: transparent;
+  border: 0px;
 }
 
 .walletButton {
@@ -11,32 +8,45 @@
   color: white;
   border: 10px;
   border-radius: 90px;
+  padding: 1px 2px;
 }
 
 .fontHeader {
   background: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%);
-  backdrop-filter: blur(45px);
 }
 
 .cardFooter {
   background: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%);
-  backdrop-filter: blur(4px);
+  backdrop-filter: blur(10px);
   color: white;
   height: 100%;
   width: 100%;
- }
+}
 
 .cardServices {
   color: white;
-  border-radius: 20px;
+  border-radius: 10px;
   border: 2px solid rgba(229, 233, 246, 0.4);
+  width: 100%;
+  height: 100%;
+  align-self: center;
 }
 
 .textFooter {
-  color: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%);
+  background: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .borderSearch {
-  border: 2px;
+  border: 1px;
   border-radius: 90px;
+  border-color: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%);
 }
+
+// .backgroundButton {
+//   border-image-source: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%) !important;
+//   border-radius: 90px;
+//   border: 2px ;
+//   padding: 2px;
+// }
