--- a/src/Components/Page/style.module.scss
+++ b/src/Components/Page/style.module.scss
@@ -13,6 +13,7 @@
 
 .fontHeader {
   background: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%);
+  backdrop-filter: blur(45px);
 }
 
 .cardFooter {
@@ -50,3 +51,8 @@
 //   border: 2px ;
 //   padding: 2px;
 // }
+
+.cardExclusive {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  background: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%);
+}
