--- a/src/Components/AppSkeleton/style.module.scss
+++ b/src/Components/AppSkeleton/style.module.scss
@@ -1,3 +1,3 @@
 .Background {
-  background: linear-gradient(90.71deg, #73E0A9 0%, #5B68DF 100%);
+  background: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%);
 }
