--- a/src/Components/Page/style.module.scss
+++ b/src/Components/Page/style.module.scss
@@ -26,11 +26,11 @@
 
 .cardServices {
   color: white;
-  border-radius: 10px;
+  border-radius: 30px;
   border: 2px solid rgba(229, 233, 246, 0.4);
   width: 100%;
-  height: 100%;
   align-self: center;
+  position: relative;
 }
 
 .textFooter {
@@ -66,9 +66,9 @@
 
 .ellipsGems1 {
   position: absolute;
-  left: 18%;
-  right: 18%;
-  top: 100%;
+  left: 42%;
+  right: 40%;
+  top: 80%;
 }
 
 .ellipsGems2 {
@@ -83,4 +83,18 @@
   left: 80%;
   right: 80%;
   top: 100%;
+}
+
+.classRectangle {
+  position: static;
+}
+
+.bif {
+  position: relative;
+}
+
+.created {
+  background: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
