--- a/src/Components/Page/style.module.scss
+++ b/src/Components/Page/style.module.scss
@@ -3,6 +3,10 @@
   border: 0px;
 }
 
+.opacity {
+  opacity: 0.5;
+}
+
 .walletButton {
   background: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%);
   color: white;
