--- a/src/Components/AppSkeleton/style.module.scss
+++ b/src/Components/AppSkeleton/style.module.scss
@@ -1,3 +1,3 @@
 .Background {
-  background: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%);
+  background: linear-gradient(90.71deg,#5b68df 0%, #73e0a9 100% );
 }
