feat: background ellipses

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,8 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
-@import 'GlobalStyles.scss';
+@import 'elements.scss';
 @import 'bootstrap/dist/css/bootstrap.min.css';
+
+
+body {
+  background: #1F1D2B;
+};
