--- a/src/styles/elements.scss
+++ b/src/styles/elements.scss
@@ -6,6 +6,11 @@
   text-align: justify;
 }
 
+.font-10 {
+  font-size: 10px;
+  line-height: 14px;
+}
+
 .font-14 {
   font-size: 14px;
   line-height: 20px;
@@ -14,8 +19,4 @@
 .font-16 {
   font-size: 16px;
   line-height: 23px;
-}
-
-.margin-top {
-  margin-top: 220px;
 }
