--- a/src/styles/elements.scss
+++ b/src/styles/elements.scss
@@ -21,6 +21,11 @@
   line-height: 23px;
 }
 
+.font-20 {
+  font-size: 20px;
+  line-height: 29px;
+}
+
 .decoration-none {
   text-decoration: none;
 }
