fix: mobile version  width page

--- a/src/pages/Home/style.module.scss
+++ b/src/pages/Home/style.module.scss
@@ -200,4 +200,14 @@
   .createButton {
     margin-top: 20px;
   }
+  
+  .ellipseRight {
+    width: 100%;
+    //height: auto;
+  }
+  //
+  .ellipseLeft {
+    width: 100%;
+    height: auto;
+  }
 }
