--- a/src/Components/Page/style.module.scss
+++ b/src/Components/Page/style.module.scss
@@ -107,7 +107,7 @@
 }
 
 .articleCard {
-  color: white;
+  color: var(--white);
   border-radius: 30px;
   border: 2px solid rgba(229, 233, 246, 0.4);
   align-self: center;
