--- a/src/Theme/overwrites.scss
+++ b/src/Theme/overwrites.scss
@@ -34,4 +34,10 @@ $font-family-base: 'Roboto', sans-serif;
   --gray-600: #{$gray-600};
   --gray-400: #{$gray-400};
   --gray-501: #{$gray-501};
+  --lime-green: #{$lime-green};
+  --soft-blue: #{$soft-blue};
+  --black-background: #{$black-background};
+  --light-grayish: #{$light-grayish};
+  --dark-grayish: #{$dark-grayish};
+  --black: #{$black};
 }
