--- a/src/Theme/variables.scss
+++ b/src/Theme/variables.scss
@@ -1,7 +1,7 @@
 // Colors
 $primary: #3A4AFF;
 $primary-rgb: 58,74,255;
-$white: #FFF;
+$white: white;
 $light: #E8E8E8;
 $whisper: #EEE;
 $light-rgb: 232, 232, 232;
@@ -32,6 +32,13 @@ $background-900: #0B142E;
 $gray-600: #BFBFBF;
 $gray-400: #F0F0F0;
 $gray-501: #D9D9D9;
+$lime-green: #73e0a9;
+$soft-blue: #5b68df;
+$black-background: rgba(31, 29, 43, 0.12);
+$light-grayish: rgba(229, 233, 246, 0.4);
+$dark-grayish: #252836;
+$black: rgba(0, 0, 0, 0.25);
+
 
 // Variables
 $default-border-radius: 8px;
