--- a/src/Theme/overwrites.scss
+++ b/src/Theme/overwrites.scss
@@ -40,4 +40,5 @@ $font-family-base: 'Roboto', sans-serif;
   --light-grayish: #{$light-grayish};
   --dark-grayish: #{$dark-grayish};
   --black: #{$black};
+  --background: #{$background};
 }
