--- a/src/Theme/variables.scss
+++ b/src/Theme/variables.scss
@@ -38,6 +38,7 @@ $black-background: rgba(31, 29, 43, 0.12);
 $light-grayish: rgba(229, 233, 246, 0.4);
 $dark-grayish: #252836;
 $black: rgba(0, 0, 0, 0.25);
+$background: #1F1D2B;
 
 
 // Variables
