--- a/src/Components/SwitchTheme/style.module.scss
+++ b/src/Components/SwitchTheme/style.module.scss
@@ -1,41 +1,10 @@
-.zIndex4 {
-  z-index: 4;
-}
-
-.text-justify {
-  text-align: justify;
-}
-
-.font-10 {
-  font-size: 10px;
-  line-height: 14px;
-}
-
-.font-14 {
-  font-size: 14px;
-  line-height: 20px;
-}
-
-.font-16 {
-  font-size: 16px;
-  line-height: 23px;
-}
-
-.font-20 {
-  font-size: 20px;
-  line-height: 29px;
-}
-
-.decoration-none {
-  text-decoration: none;
-}
-
 .switch {
   position: relative;
   display: inline-block;
   width: 60px;
   height: 34px;
 
+  background-color: red;
 }
 
 .switch input {
@@ -52,7 +21,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  border-radius: 20px;
+
   background-color: #ccc;
   transition: 0.4s;
 }
@@ -64,15 +33,14 @@
   width: 26px;
   left: 4px;
   bottom: 4px;
-  border-radius: 20px;
   background-color: white;
   transition: 0.4s;
 }
 
-input:checked + .slider {
+input:checked * .slider {
   background-color: #2196f3;
 }
 
-input:checked + .slider:before {
+input:checked * .slider:before {
   transform: translateX(26px);
 }
