--- a/src/Theme/index.scss
+++ b/src/Theme/index.scss
@@ -1,6 +1,7 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import 'elements.scss';
 @import 'bootstrap/dist/css/bootstrap.min.css';
+@import 'overwrites.scss';
 
 
 body {
